@@ -25,6 +25,7 @@
  *
  ************************************************************************/
 
+#include <osl/diagnose.h>
 
 #include <numeric/lpmodel.hxx>
 #include <numeric/lpbase.hxx>
