@@ -1,5 +1,8 @@
 2006-01-09  Michael Meeks  <michael.meeks@novell.com>
 
+	* source/numeric/matrix.cxx: re-work boost / stl bits
+	a little.
+
 	* */makefile.mk: add build bits.
 
 	* *.cxx: s/assert/OSL_ASSERT/g
